tests/invalid/zinc2mer_lib.err_exp
zinc2mer_lib.m:039: In clause for `min_domsize_min_split(ia, oa)':
zinc2mer_lib.m:039:   in the return value of call to function
zinc2mer_lib.m:039:   `zinc2mer_lib.min_split_var'/1:
zinc2mer_lib.m:039:   mode error: variable `BranchConstraints' has
zinc2mer_lib.m:039:   instantiatedness `free',
zinc2mer_lib.m:039:   expected instantiatedness was `any'.
zinc2mer_lib.m:041: In `min_split_var'(in(any)) = in(any):
zinc2mer_lib.m:041:   error: determinism declaration not satisfied.
zinc2mer_lib.m:041:   Declared `det', inferred `semidet'.
zinc2mer_lib.m:049:   Unification of `BranchConstraints' and `list.[]' can
zinc2mer_lib.m:049:   fail.
For more information, recompile with `-E'.
